blog_v2/infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  # indicates how many containers we need in this pod
  replicas: 1
  # selector here is telling deployment to find all pods with given label app:event-bus and telling the deployment that those are the pods it should be incharge of.
  selector:
    matchLabels:
      app: event-bus
  # template is the exact configuration of the deployment we want to create
  # here we are telling that the pod should have a label of app:event-bus
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: skmuddamsetty/event-bus:latest
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  type: ClusterIP
  # here selector is telling the service to select all the pods with the name app:event-bus
  # FYI this is the same label that has been given to the pod while creating the pod using deployment inside template section
  selector:
    app: event-bus
  ports:
    # name here is for logging purposes and need not be same as pod name, it can be anything. For ex: akjwndajknwd
    - name: event-bus
      protocol: TCP
      # port is the port of node port or cluster ip service port that will be created
      port: 4005
      # targetPort is the port our node application is running on
      targetPort: 4005
